--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "sass": "^1.66.1",
     "styled-components": "^6.0.7",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
